apps/yarr/yarr-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yarr-ext
  labels:
    type: external

spec:
  tls:
    - hosts:
        - feeds.former-hostname.com
      secretName: feeds.former-hostname.com
  rules:
    - host: feeds.former-hostname.com
      http:
        paths:
          - backend:
              service:
                name: yarr
                port:
                  number: 7070
            path: /
            pathType: Prefix
