apps/yarr/yarr-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yarr-local
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: local
spec:
  rules:
    - host: yarr.local
      http:
        paths:
          - backend:
              service:
                name: yarr
                port:
                  number: 7070
            path: /
            pathType: Prefix
